fix: [PV2-01] fixed most used languages overflow to the right

--- a/css/styles.css
+++ b/css/styles.css
@@ -247,7 +247,11 @@ header {
 
 .skills-container-bg {
   background-color: var(--section-background-color);
-  padding: 40px;
+  padding: 20px;
+
+  @media screen and (min-width: 768px) {
+    padding: 40px;
+  }
 }
 
 .skills-container {
@@ -264,7 +268,7 @@ header {
   margin-bottom: auto;
 }
 
-#display-skills img{
+#display-skills img {
   max-width: 5rem;
   max-height: 5rem;
   margin: 0.2rem;
@@ -312,7 +316,7 @@ header {
 }
 
 #most-used-languages {
-  margin: 0 auto;
+  width: 100%;
 }
 
 #skeleton-languages-table {
@@ -387,7 +391,8 @@ header {
   background-color: var(--background-color);
   display: flex;
   flex-direction: column;
-  width: 20rem;
+  max-width: 20rem;
+  margin: 0 auto;
   border-radius: 0.5rem;
   padding: 1rem;
 }
@@ -803,7 +808,9 @@ section {
   text-align: center;
   margin-bottom: 10px;
   border: 1px dashed var(--highlights);
-  transition: color 0.3s ease, border 0.3s ease;
+  transition:
+    color 0.3s ease,
+    border 0.3s ease;
 }
 
 #project-next-prev-container a:hover {
@@ -896,7 +903,9 @@ section {
     margin: 5px;
     height: 3px;
     width: 70%;
-    transition: transform 0.3s ease-in-out, width 0.3s ease-in-out,
+    transition:
+      transform 0.3s ease-in-out,
+      width 0.3s ease-in-out,
       transform-origin 0.3s ease-in-out;
   }
 
@@ -930,7 +939,9 @@ section {
     padding: 5px 140px 5px 140px;
     text-decoration: none;
     text-align: center;
-    transition: border 0.3s ease, color 0.3s ease;
+    transition:
+      border 0.3s ease,
+      color 0.3s ease;
   }
 
   .mob-nav-cont-button:hover {
@@ -957,7 +968,9 @@ section {
     border: dashed 1px var(--highlights);
     text-decoration: none;
     text-align: center;
-    transition: border 0.3s ease, color 0.3s ease;
+    transition:
+      border 0.3s ease,
+      color 0.3s ease;
     width: 100%;
   }
 
@@ -1056,7 +1069,7 @@ section {
     margin: 0 auto;
   }
 
-  #display-skills img{
+  #display-skills img {
     max-width: 90%;
     max-height: 90%;
     margin: 0.2rem;
